WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299999
WPT failure for css/cssom/shorthand-values.html
https://bugs.webkit.org/show_bug.cgi?id=299999
Summary
WPT failure for css/cssom/shorthand-values.html
Karl Dubost
Reported
2025-10-01 17:43:25 PDT
http://wpt.live/css/cssom/shorthand-values.html
http://wpt.fyi/css/cssom/shorthand-values.html
This is failing in Chrome and Safari but Pass in Firefox.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-08 17:44:12 PDT
<
rdar://problem/162244690
>
Radar WebKit Bug Importer
Comment 2
2025-10-08 17:44:14 PDT
<
rdar://problem/162244676
>
Karl Dubost
Comment 3
2025-10-09 16:53:05 PDT
<
rdar://problem/162244690
>
Tim Nguyen (:ntim)
Comment 4
2025-12-01 16:43:50 PST
The border failures could probably be fixed by removing those lines:
https://searchfox.org/wubkat/rev/6230eecf3f6be5d63f1e9265d72f9c7570659613/Source/WebCore/css/StyleProperties.cpp#235-242
Fady Farag
Comment 5
2025-12-01 22:29:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54679
EWS
Comment 6
2025-12-03 09:48:20 PST
Committed
303844@main
(4bcc6b54119d): <
https://commits.webkit.org/303844@main
> Reviewed commits have been landed. Closing PR #54679 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug