Fix WPT failure for `css/cssom/shorthand-values.html` https://bugs.webkit.org/show_bug.cgi?id=299999 rdar://162244690

Reviewed by Tim Nguyen.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

This patch fixes an issue in serialization where in the past, we used to not serialize `border` property
and were not canonical. Now it aligns with other browsers and returns canonical reference.

CSS spec: https://drafts.csswg.org/cssom/#serialize-a-css-declaration-block

* LayoutTests/fast/css/remove-shorthand-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/stretch/block-height-008-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/cssom/shorthand-values-expected.txt:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-sizing/stretch/block-height-008-expected.txt:
* Source/WebCore/css/StyleProperties.cpp:
(WebCore::canUseShorthandForLonghand):

Canonical link: https://commits.webkit.org/303844@main